manifests/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amex-frontend
  namespace: amex
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: amex-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: amex-frontend
    spec:
      containers:
        - name: amex-frontend
          image: ghcr.io/bakseter/amex/frontend:latest
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: nginx-tmp
              mountPath: /tmp/nginx
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: nginx-tmp
          emptyDir: {}
      #     affinity:
      #       podAntiAffinity:
      #         requiredDuringSchedulingIgnoredDuringExecution:
      #           - labelSelector:
      #               matchExpressions:
      #                 - key: app
      #                   operator: In
      #                   values:
      #                     - amex-frontend
      #             topologyKey: bakseter.net/physical-node
      securityContext:
        fsGroup: 65534
        runAsNonRoot: true
        runAsGroup: 65534
        runAsUser: 6554
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
          - 65534
