manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amex-frontend
  namespace: amex
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app.kubernetes.io/name: amex-frontend
  type: ClusterIP
