manifests/frontend/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: amex-frontend
  namespace: amex
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: amex-frontend

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-home
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus-blackbox-exporter
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: homepage
            app.kubernetes.io/name: homepage
      toPorts:
        - ports:
            - port: '3000'
              protocol: TCP

  egress: []
